--- a/instructions.html
+++ b/instructions.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title> </title>
-        <link href="styles1.css" rel="stylesheet">
+        <link href="instructions.css" rel="stylesheet">
     </head>
     
     <body>
