--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>imageNest|by Surabhi</title>
+    <title>imageNest</title>
+    <link rel="icon" href="./nest.jpg" type="image/x-icon">
+
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -28,7 +30,7 @@
       </div>
     </div>
     <section class="search">
-      <img src="new.jpg" alt="search-img">
+      <img src="final.jpg" alt="search-img">
       <div class="content">
         <div class="header">               
         <h1>imageNest</h1>
